Disable wpad-openssl to fix compilation issue
Comment out wpad-openssl to prevent hostapd compilation error.

--- a/ipq60xx.config
+++ b/ipq60xx.config
@@ -88,7 +88,12 @@ CONFIG_LIBCURL_MBEDTLS=n
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_wpad-openssl=y
+
+# Disabled to avoid hostapd compilation error (he_mu_edca struct mismatch)
+# CONFIG_PACKAGE_wpad-openssl=y
+# CONFIG_PACKAGE_wpad-openssl is not set
+# If you later want Wi-Fi, install wpad-openssl via opkg after flashing
+
 CONFIG_PACKAGE_luci-mod-status-nss=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
