--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ env:
   NSS_PACKAGES_REPOSITORY_BRANCH: NSS-12.5-K6.x
 
   # Build Configuration
-  CONFIG_FILE: ipq60xx.config
+  CONFIG_FILE: re-cs-07.config
   CUSTOM_FILES_PATH: files
 
   # Release Configuration
