--- a/re-cs-07.config
+++ b/re-cs-07.config
@@ -1,15 +1,13 @@
 #
-# Automatically generated file; DO NOT EDIT.
-# OpenWrt Configuration
+# OpenWrt Configuration for JDCloud RE-CS-07
+# Wired-only NSS-accelerated build – Wi-Fi completely disabled
+# Last updated: February 2026
 #
 
 ## Target Platform
 CONFIG_TARGET_qualcommax=y
 CONFIG_TARGET_qualcommax_ipq60xx=y
-CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
-CONFIG_ATH11K_MEM_PROFILE_512M=y
-CONFIG_IPQ_MEM_PROFILE_512=y
-CONFIG_KERNEL_IPQ_MEM_PROFILE=512
+CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
 
 ## Essential NSS Configuration
 CONFIG_ATH11K_NSS_SUPPORT=y
@@ -24,12 +22,22 @@ CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr=y
 CONFIG_PACKAGE_kmod-qca-mcs=y
 
-## Disable Ath10k
+## Disable Ath10k (not needed)
 CONFIG_ATH10K-CT_LEDS=n
 CONFIG_PACKAGE_ath10k-board-qca9887=n
 CONFIG_PACKAGE_ath10k-firmware-qca9887=n
 CONFIG_PACKAGE_ath10k-firmware-qca9887-ct=n
 CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=n
+
+## Wi-Fi completely disabled (no driver, no firmware, no wpad/hostapd)
+CONFIG_PACKAGE_kmod-ath11k=n
+CONFIG_PACKAGE_kmod-ath11k-ahb=n
+CONFIG_PACKAGE_kmod-ath11k-pci=n
+CONFIG_PACKAGE_ath11k-firmware-ipq6018=n
+CONFIG_PACKAGE_ath11k-firmware-qcn9074=n
+CONFIG_PACKAGE_wpad-openssl=n
+CONFIG_PACKAGE_wpad-basic-mbedtls=n
+CONFIG_PACKAGE_hostapd-common=n
 
 ## Compiler and Toolchain Optimization
 CONFIG_BINUTILS_USE_VERSION_2_45=y
@@ -51,7 +59,7 @@ CONFIG_CCACHE=y
 CONFIG_BUILD_PATENTED=y
 CONFIG_EXPERIMENTAL=y
 
-# Hardening build options
+## Hardening
 CONFIG_PKG_CHECK_FORMAT_SECURITY=y
 CONFIG_PKG_ASLR_PIE_ALL=y
 CONFIG_PKG_CC_STACKPROTECTOR_ALL=y
@@ -60,13 +68,13 @@ CONFIG_PKG_FORTIFY_SOURCE_3=y
 CONFIG_PKG_RELRO_FULL=y
 CONFIG_USE_SECCOMP=y
 
-## SSH Server Configuration
+## SSH Server (prefer OpenSSH over dropbear)
 CONFIG_PACKAGE_dropbear=n
 CONFIG_PACKAGE_openssh-moduli=y
 CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 
-## SSL and Cryptography Configuration
+## SSL and Cryptography (OpenSSL everywhere)
 CONFIG_LUA_ECO_MBEDTLS=n
 CONFIG_LUA_ECO_OPENSSL=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
@@ -78,7 +86,7 @@ CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-app-bcp38=y
 
-## Additional Packages and Utilities
+## Core Packages
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_HTOP_LMSENSORS=n
@@ -88,33 +96,87 @@ CONFIG_LIBCURL_MBEDTLS=n
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
-
-# Disabled to avoid hostapd compilation error (he_mu_edca struct mismatch)
-# CONFIG_PACKAGE_wpad-openssl=y
-# CONFIG_PACKAGE_wpad-openssl is not set
-# If you later want Wi-Fi, install wpad-openssl via opkg after flashing
-
 CONFIG_PACKAGE_luci-mod-status-nss=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
 
-## Redundant Default Packages
+## Safe Additional LuCI Apps & Themes (official/community compatible)
+CONFIG_PACKAGE_luci-app-samba4=y                # File sharing over USB drive
+CONFIG_PACKAGE_luci-app-ttyd=y                   # Web-based terminal
+CONFIG_PACKAGE_luci-app-zerotier=y               # Zerotier VPN
+CONFIG_PACKAGE_luci-app-autoreboot=y             # Scheduled reboots
+CONFIG_PACKAGE_luci-theme-argon=y                # Modern theme
+
+## Clean up unwanted defaults
+CONFIG_PACKAGE_luci-app-ddns=n
+CONFIG_PACKAGE_luci-app-vlmcsd=n
+CONFIG_PACKAGE_luci-app-xlnetacc=n
+CONFIG_PACKAGE_luci-app-adbyby-plus=n
+
+## Kernel Modules – Wired / USB 3.0 / Proxy acceleration
+CONFIG_PACKAGE_kmod-dsa=y
+CONFIG_PACKAGE_kmod-dsa-tag-dsa=y
+CONFIG_PACKAGE_kmod-fuse=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_kmod-mtd-rw=y
+
+# USB 3.0 support (RE-CS-07 has USB 3.0 port)
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y                      # xHCI for USB 3.0
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y           # Faster USB SSD/HDD
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8152=y           # Common USB Ethernet
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y          # USB modems (failover WAN)
+
+# nftables acceleration (fullcone, tproxy, offload)
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-fib=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+
+## System utilities
+CONFIG_PACKAGE_autocore=y
+CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_cfdisk=y
+CONFIG_PACKAGE_cgdisk=y
+CONFIG_PACKAGE_coremark=y
+CONFIG_PACKAGE_cpufreq=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_gdisk=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_sfdisk=y
+CONFIG_PACKAGE_sgdisk=y
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-lib-base=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
+CONFIG_PACKAGE_luci-lua-runtime=y
+CONFIG_PACKAGE_luci-proto-bonding=y
+CONFIG_PACKAGE_luci-proto-relay=y
+
+## Disabled / Redundant
 CONFIG_PACKAGE_kmod-phy-aquantia=n
-CONFIG_PACKAGE_kmod-usb-core=n
 CONFIG_PACKAGE_kmod-usb-dwc3=n
 CONFIG_PACKAGE_kmod-usb-dwc3-qcom=n
-CONFIG_PACKAGE_kmod-usb-xhci-hcd=n
-CONFIG_PACKAGE_kmod-usb3=n
-CONFIG_PACKAGE_wpad-basic-mbedtls=n
+CONFIG_PACKAGE_kmod-usb-xhci-hcd=n             # Already covered by kmod-usb3
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=n
 CONFIG_PACKAGE_attendedsysupgrade-common=n
 
-# Disable unnecessary debugging for Wi-Fi driver.
+## Disable unnecessary debugging
 CONFIG_ATH11K_DEBUGFS_HTT_STATS=n
 CONFIG_ATH11K_DEBUGFS_STA=n
-# Disables thermal throttling support for ath11k.
 CONFIG_ATH11K_THERMAL=n
 
-## Prevent Custom Feeds
+## No extra custom feeds
 CONFIG_FEED_nss=n
 CONFIG_FEED_sqm_scripts_nss=n
