Switch SSH server from OpenSSH to Dropbear
Changed SSH server configuration from OpenSSH to Dropbear, enabling it as the default. Adjusted related OpenSSH settings to be disabled.

--- a/re-cs-07.config
+++ b/re-cs-07.config
@@ -69,11 +69,11 @@ CONFIG_PKG_FORTIFY_SOURCE_3=y
 CONFIG_PKG_RELRO_FULL=y
 CONFIG_USE_SECCOMP=y
 
-## SSH Server (prefer OpenSSH over dropbear)
-CONFIG_PACKAGE_dropbear=n
-CONFIG_PACKAGE_openssh-moduli=y
-CONFIG_PACKAGE_openssh-server=y
-CONFIG_PACKAGE_openssh-sftp-server=y
+## SSH Server (Dropbear - lightweight, default)
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_openssh-server=n
+CONFIG_PACKAGE_openssh-sftp-server=n
+CONFIG_PACKAGE_openssh-moduli=n
 
 ## SSL and Cryptography (OpenSSL everywhere)
 CONFIG_LUA_ECO_MBEDTLS=n
@@ -100,6 +100,14 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-mod-status-nss=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
+
+## LuCI Web Server and RPC Daemon (required for full LuCI functionality)
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_uhttpd-mod-tls=y          # Enables HTTPS (recommended with your OpenSSL setup)
+CONFIG_PACKAGE_rpcd=y
+CONFIG_PACKAGE_rpcd-mod-file=y           # File upload/download (firmware, backup, etc.)
+CONFIG_PACKAGE_rpcd-mod-iwinfo=n         # Explicitly disabled (no Wi-Fi)
 
 ## Safe Additional LuCI Apps & Themes (official/community compatible)
 CONFIG_PACKAGE_luci-app-samba4=y                # File sharing over USB drive
